# ROS2_image_processing

./: CMakeLists.txt  README.md  package.xml
src/: image_bag_reader.cpp  image_bag_recorder.cpp
